# rag_qa_project

./: .gitignore  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
src/: document.py  memory.py  vector_db.py
